syntax = "proto3";

package lancom;

// Enum for component types (Publisher, Subscriber, Service)
enum ComponentTypeEnum {
    PUBLISHER = 0;
    SUBSCRIBER = 1;
    SERVICE = 2;
}

// Component information (for publishers, subscribers, and services)
message ComponentInfo {
    string name = 1;
    string componentID = 2; // HashIdentifier
    string nodeID = 3; // HashIdentifier of the owning node
    ComponentTypeEnum type = 4;
    string ip = 5; // IPAddress
    int32 port = 6; // Port
}

// Node Information
message NodeInfo {
    string name = 1;
    string nodeID = 2; // HashIdentifier
    int32 infoID = 3; // Unique identifier for node info instance
    string ip = 4; // IPAddress
    string type = 5;
    int32 port = 6;
    repeated ComponentInfo publishers = 7;
    repeated ComponentInfo subscribers = 8;
    repeated ComponentInfo services = 9;
}
